Modefid Navbar position and scroll behavior

--- a/styles/index.html
+++ b/styles/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <header>
+    <!-- NAVBAR SECTION STARTS HERE -->
     <section id="nav-section">
     <nav>
       <ul class="nav-bar">
@@ -28,8 +29,9 @@
       </ul>
     </nav>
     </section>
+<!-- NAVBAR SECTION ENDS HERE -->
 
-
+<!-- NAVBAR SECTION STARTS HERE -->
     <section id="intro-section">
       <div class="intro">
       <h2>HI!</h2>
@@ -40,7 +42,9 @@
       </div>
     </section>
   </header>
+<!-- NAVBAR SECTION ENDS HERE -->
 
+<!-- ABOUT SECTION STARTS HERE -->
   <section id="About-me">
     <div class="img">
       <img src="./img/man.png" alt="Man-imge" />
@@ -64,7 +68,9 @@
       <button type="submit">Download CV</button>
     </div>
   </section>
+<!-- NAVBAR SECTION ENDS HERE -->
 
+<!-- SERVICES SECTION STARTS HERE -->
   <section id="service-section">
     <p>What I Do?</p>
     <h3>Services</h3>
@@ -102,10 +108,10 @@
       </div>
     </div>
   </section>
+<!-- SERVICES SECTION ENDS HERE  -->
 
-
-  
-  <section id="portfolio">
+<!-- PORTFOLIO SECTION STARTS HERE -->
+ <section id="portfolio">
     <p>What I Did?</p>
     <h3>Portfolio</h3>
   <div class="box-section">
@@ -156,8 +162,9 @@
     </div>
   </div>
 </section>
+<!-- PORTFOLIO SECTION ENDS HERE -->
 
-
+<!-- WORK SECTION STARTS -->
 <section id="Work-offer">
   <div class="text">
     <h3>Want to Work With Me ?</h3>
@@ -167,7 +174,9 @@
   <button type="submit">Hire Me</button>
   </div>
 </section>
+//WORK SECTION ENDS
 
+//TESTMONIAL SECTION STARTS HERE
 <section id="Testmonial">
   <div class="text-area">
   <p>What Client Think About Me</p>
@@ -187,8 +196,10 @@
   </div>
 </div>
 </section>
+<!-- TESTMONIAL SECTION ENDS HERE -->
 
 
+<!-- BLOG SECTION STARTS HERE -->
 <section id="Blog-section">
   <p>Recent Posts ?</p>
   <h3>Blog</h3>
@@ -221,9 +232,9 @@
   </div>
   </div>
     </section>
+<!-- BLOG SECTION ENDS HERE  -->
 
-
-    
+<!-- CONTACT SECTION HERE -->
   <section id="Contect-section">
     <div class="form-text">
       <p>How can you communicate?</p>
@@ -236,8 +247,9 @@
      <button type="submit">Send Message</button>
     </div>
   </section>
+<!-- CONTACT SECTION ENDS -->
 
-
+<!-- FOOTER-SECTION STARTS HERE -->
   <section id="footer-section">
     <hr>
     <div class="footer">
@@ -251,5 +263,7 @@
       </ul>
     </div>
   </section>
+
+<!-- FOOTER-SECTION ENDS HERE -->
 </body>
 </html>
