--- a/styles/index.html
+++ b/styles/index.html
@@ -36,7 +36,7 @@
       <div class="intro">
       <h2>HI!</h2>
       <br />
-      <h3>I am John Doe</h3>
+      <h3>I am Shahid</h3>
       <p>FRONTEND WEB DESIGNER</p>
       <button type="submit">Visit My Works</button>
       </div>
